cmake_minimum_required(VERSION 3.15.0)

find_package(Doxygen QUIET COMPONENTS doxygen)
if (DOXYGEN_FOUND)
message(STATUS "Doxygen found, generating docs...")
set(DOXYGEN_EXCLUDE_PATTERNS "*/include/detail/*;*/include/version/detail/*")
set(DOXYGEN_EXCLUDE_SYMBOLS "liber_*;LIBER_*;FD4_RUNTIME_CLASS;FD4_SINGLETON_CLASS")
doxygen_add_docs(doc "doc/MainPage.dox" "doc/Changelog.dox" "include" "include/detail/optref.hpp" ALL COMMENT "Generate HTML documentation")
else()
message(STATUS "Doxygen not found, skipping generating docs...")
endif()